kubernetes/apps/media/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  namespace: media
spec:
  ports:
    - name: http
      port: 80
      targetPort: 8096
---
apiVersion: v1
kind: Service
metadata:
  name: local-jellyfin
  namespace: traefik
  annotations:
    external-dns.alpha.kubernetes.io/hostname: jellyfin.titushome.dev
    external-dns.alpha.kubernetes.io/ttl: "60"
    "lbipam.cilium.io/ips": "10.0.40.103"
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: traefik
  ports:
    - port: 443
      targetPort: 443
